--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -144,7 +144,6 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -267,6 +266,7 @@ deny 2620:18c:0:192::e0:166;
 deny 2620:7:6001::120;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
+deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
