--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -67,18 +67,15 @@ set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
-set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.14.4;
-set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
-set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
@@ -225,7 +222,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -811,7 +807,6 @@ set_real_ip_from 23.129.64.163;
 set_real_ip_from 23.129.64.164;
 set_real_ip_from 23.129.64.165;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
@@ -828,7 +823,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -837,11 +831,12 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -884,7 +879,6 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -935,7 +929,6 @@ set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
-set_real_ip_from 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -955,7 +948,6 @@ set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:a140:2262:7686::1;
@@ -1008,7 +1000,6 @@ set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
@@ -1087,6 +1078,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1363,6 +1355,7 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:82;
 set_real_ip_from 2a12:a800:2:1:185:241:208:92;
 set_real_ip_from 2a12:a800:2:1:45:138:16:107;
 set_real_ip_from 2a12:a800:2:1:45:138:16:113;
+set_real_ip_from 2a12:a800:2:1:45:138:16:164;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
 set_real_ip_from 2a12:a800:2:1:45:138:16:231;
@@ -1412,7 +1405,6 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1439,6 +1431,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1455,6 +1448,7 @@ set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
 set_real_ip_from 45.138.16.231;
@@ -1556,6 +1550,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
