--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -10,6 +10,7 @@ allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:401:3000::1f88;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
@@ -221,7 +222,6 @@ allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2605:e440:3::3ef;
-allow 2605:e440:38::21a;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
@@ -570,7 +570,6 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
-allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
