--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -10,7 +10,6 @@ deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::3ea4;
 deny 2001:41d0:304:200::9dce;
-deny 2001:41d0:401:3000::1f88;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::6f85;
 deny 2001:41d0:601:1100::71bb;
@@ -146,7 +145,6 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -306,7 +304,6 @@ deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 deny 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 deny 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 deny 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
-deny 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 deny 2a03:4000:28:1e8::69;
@@ -367,6 +364,7 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
+deny 2a06:1700:1:109::209:a94;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
