--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 144.126.133.74;
 allow 144.208.79.169;
+allow 146.103.43.17;
 allow 146.19.254.163;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -269,7 +270,6 @@ allow 185.107.57.65;
 allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
-allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
@@ -824,6 +824,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -831,9 +832,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.3;
-allow 23.191.200.4;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1085,6 +1086,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1301,6 +1303,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
+allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
@@ -1636,6 +1639,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
