--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -146,6 +146,7 @@ deny 139.99.8.57;
 deny 141.98.11.62;
 deny 144.126.133.74;
 deny 144.208.79.169;
+deny 146.103.43.17;
 deny 146.19.254.163;
 deny 146.59.126.232;
 deny 146.59.231.4;
@@ -269,7 +270,6 @@ deny 185.107.57.65;
 deny 185.107.57.66;
 deny 185.112.144.11;
 deny 185.112.146.167;
-deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.129.61.1;
@@ -824,6 +824,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -831,9 +832,9 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
 deny 23.191.200.3;
-deny 23.191.200.4;
+deny 23.191.200.30;
+deny 23.191.200.31;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -1085,6 +1086,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1301,6 +1303,7 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
+deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
@@ -1636,6 +1639,7 @@ deny 83.147.17.190;
 deny 83.217.9.73;
 deny 83.228.94.69;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
