--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -146,6 +146,7 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 144.208.79.169;
+set_real_ip_from 146.103.43.17;
 set_real_ip_from 146.19.254.163;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -269,7 +270,6 @@ set_real_ip_from 185.107.57.65;
 set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
-set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.129.61.1;
@@ -824,6 +824,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -831,9 +832,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1085,6 +1086,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1301,6 +1303,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
+set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
 set_real_ip_from 2a0e:bfc0:0:14::24a8;
@@ -1636,6 +1639,7 @@ set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
